--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,18 @@
-blinker==1.7.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.12.1
-Flask==3.0.0
-flask-ngrok==0.0.25
-fonttools==4.47.0
-Frozen-Flask==1.0.1
-idna==3.6
-importlib-metadata==7.0.1
-importlib-resources==6.1.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-ngrok==0.12.1
-numpy==1.26.3
-packaging==23.2
-pandas==2.1.4
-pillow==10.2.0
-plotly==5.18.0
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
+click==7.1.2
+cycler==0.10.0
+Flask==1.1.2
+itsdangerous==1.1.0
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.2
+numpy==1.19.0
+pandas==1.0.5
+plotly==4.8.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
 requests==2.31.0
 six==1.16.0
-tenacity==8.2.3
-tzdata==2023.4
 urllib3==2.1.0
-Werkzeug==3.0.1
-zipp==3.17.0
+Werkzeug==1.0.1
