--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 click==7.1.2
-cycler==0.10.0
+cycler==0.12.1
 Flask==1.1.2
+Frozen-Flask==1.0.15
 itsdangerous==1.1.0
+Jinja2==2.11.2
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
 matplotlib==3.2.2
 numpy==1.19.0
 pandas==1.0.5
+pillow==10.2.0
 plotly==4.8.2
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-retrying==1.3.3
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 urllib3==2.1.0
