--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
 click==7.1.2
-cycler==0.12.1
+cycler==0.10.0
 Flask==1.1.2
 Frozen-Flask==0.15
 itsdangerous==1.1.0
 Jinja2==2.11.2
-kiwisolver==1.2.0
+kiwisolver==1.4.5
 MarkupSafe==1.1.1
 matplotlib==3.2.2
-pandas==1.0.5
-pillow==10.2.0
+pandas==1.3.5
 plotly==4.8.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-six==1.16.0
-urllib3==2.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
+six==1.15.0
 Werkzeug==1.0.1
